--- a/style.css
+++ b/style.css
@@ -133,6 +133,7 @@ body {
   flex-flow: column wrap;
   background-color: rgb(241, 241, 238);
   height: 100vh;
+  text-align: center;
 }
 
 .cart .cart__items {
@@ -146,4 +147,21 @@ body {
   margin: 0 auto;
   border: 2px solid rgb(5, 52, 219);
   background-color: rgb(249, 249, 246);
+}
+
+.cart__item {
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset, rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
+  /* border: groove 3px #a6c288; */
+  height: 130px;
+  display: flex;
+  padding: 20px;
+  text-align: center;
+  align-items: center;
+  font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif
+}
+
+.valor{
+  font-size: 20px;
+  font-style: oblique;
+  font-family:Verdana, Geneva, Tahoma, sans-serif;
 }
